traefik/08ingresscontroler.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: traefik-web-ui
 namespace: default
 annotations:
   kubernetes.io/ingress.class: traefik
spec:
 rules:
 - host: "traefik.mon.dom"
   http:
     paths:
     - backend:
         serviceName: traefik-web-ui
         servicePort: 80 
 - host: "wp.mon.dom"
   http:
     paths:
     - path: /
       backend:
         serviceName: wp
         servicePort: 80
